# libre_automate_py

./: .gitignore  pyproject.toml  readme.md  readme_zh.md
example/: gen_report.py  gen_xls.py
tests/: test_myutil.py  test_office_loader.py  test_word.py  test_workbook.py
