[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "libre_automate_py"
version = "0.0.1"
description = "LibreOffice Python Automation Toolkit"
license = "MIT"
readme = "readme.md"
authors = [
    ":twikura: rainbowtrash2333"
]
homepage = "https://github.com/rainbowtrash2333/libre_automate_py"
documentation = "https://github.com/rainbowtrash2333/libre_automate_py"
repository = "https://github.com/rainbowtrash2333/libre_automate_py"
include = [  # 修正为数组格式
    "*.md",
    "LICENSE",
    "src/**/*.py"  # 确保包含所有源代码
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
oooscript = ">=2.1.1"
types-access2base = ">=1.0.2"
types-scriptforge = ">=2.0.1"
types-unopy = ">=1.0.3"
unotools = ">=0.3.3"
verr = ">=1.1.2"
kwargshelper = ">=2.7.1"
ooo-dev-tools-gui-win = { version = ">=0.3.1", markers = "sys_platform == 'win32'" }
ooo-dev-tools = ">=0.50.0"
oooenv = "^0.2.4"
pandas = "^2.2.3"

# 将 pytest 移到开发依赖组
[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
pdbpp = "^0.10.3"
debugpy = "^1.8.1"
pytest = "^8.3.5"

# 添加构建配置（如果需要）
[tool.poetry.build]
generate-setup-file = false  # 禁用生成 setup.py

# 添加 ruff 配置
[tool.ruff]
ignore = ["E501"]
line-length = 120
select = ["E", "W", "F", "I"]  # 错误、警告、格式、导入排序

# 添加分类器（可选但推荐）
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]

# 源配置
[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"